[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/DialogBox/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://scenes/DialogBox/DialogLabel/DialogLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SoundManager/SoundManager.tscn" type="PackedScene" id=3]

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DialogLabel" parent="." instance=ExtResource( 2 )]

[node name="SoundManager" parent="." instance=ExtResource( 3 )]
